--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Run script and commit output
 
 'on':
   schedule:
-    - cron: '0 20 * * 0'
+    - cron: '0 23 * * 0-6'
   workflow_dispatch:
 
 permissions:
